[package]
name = "dablenutil"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A collection of common utility functions used across dablenparty projects"
repository = "https://github.com/dablenparty/dablenutil"
homepage = "https://github.com/dablenparty/dablenutil"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logging = ["dep:log", "dep:simplelog", "dep:time", "dep:flate2", "dep:chrono"]
tokio = ["dep:tokio"]

[dependencies]
chrono = { version = "0.4.23", optional = true }
const_format = "0.2.30"
dunce = "1.0.3"
flate2 = { version = "1.0.25", optional = true }
log = { version = "0.4.17", optional = true }
simplelog = { version = "0.12.0", optional = true, features = ["paris", "termcolor"] }
time = { version = "0.3.17", optional = true }
tokio = { version = "1.23.0", optional = true, features = ["fs", "macros", "rt-multi-thread"] }
